账号安全：当用户修改密码后，自动失效所有登录状态
