# cloud-services/docs/swagger.json
@@ -50,6 +50,22 @@
                     "Accounts"
                 ],
                 "summary": "获取用户列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 20,
+                        "description": "每页数量",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "返回所有账户信息列表",
@@ -521,6 +537,10 @@
                 "id": {
                     "type": "string",
                     "example": "67edfaa28b6491ae6926f3e8"
+                },
+                "password_session_key": {
+                    "description": "密码会话密钥，用于密码重置后，让其他token直接失效",
+                    "type": "string"
                 },
                 "role": {
                     "type": "integer",
