# cloud-services/models/account.go
@@ -8,4 +8,6 @@ type Account struct {
 	Password string        `json:"-" bson:"password" example:"foobar#1234"`
 	Email    string        `json:"email" bson:"email" example:"foo@bar.com"`
 	Role     int           `json:"role" bson:"role" example:"0"`
+	// 密码会话密钥，用于密码重置后，让其他token直接失效
+	PasswordSessionKey string `json:"password_session_key" bson:"password_session_key"`
 }
